# hp-lib

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt
common/doc/: README.md
common/include/hp/common/: config.h  interface_message.h
common/include/hp/common/buffer/: abstract_buffer.h  circular_buffer.h  circular_buffer_fast.h
common/include/perfect-lib/common/: interface_module.h
common/src/: circular_buffer.cc  fast_buffer.cc  main.cc
communication/: CMakeLists.txt
communication/include/perfect-lib/communication/: config.h.in  interface_module_communication.h  modules_communication_manager.h
communication/src/: modules_communication_manager.cc
communication/test/: CMakeLists.txt  communication.cc
controller/: CMakeLists.txt
controller/include/perfect-lib/controller/: controller_module.h  controllerdependencyinjector.h
controller/src/: controller_module.cc  controllerdependencyinjector.cc
dataaccess/: CMakeLists.txt
dataaccess/include/perfect-lib/dataaccess/: dataaccessmodule.h
dataaccess/include/perfect-lib/dataaccess/fs/: file_manager.h  fs_manager.h  interface_file_system.h
dataaccess/include/perfect-lib/dataaccess/messages/: config.h  read_file.h  write_file.h
dataaccess/src/: dataaccessmodule.cc  file_manager.cc  fs_manager.cc  interface_file.cc  read_file.cc  write_file.cc
dataaccess/test/: CMakeLists.txt  read_file_test.cc
peripheral/: CMakeLists.txt
peripheral/include/hp/buffer/: abstract_buffer.h  circular_buffer.h  circular_buffer_fast.h  fast_buffer.h
peripheral/include/hp/peripheral/: abstract_message.h  abstract_peripheral.h  message_extractor.h  tcp_client.h  tcp_server.h  tcpclient.h  tcpmessageextractor.h  tcpserver.h
peripheral/include/hp/peripheral/ip/: abstract_ip.h  tcp_client.h  tcp_server.h
peripheral/include/hp/peripheral/serial/: serial_port.h
peripheral/src/: message_extractor.cc  serial_port.cc  tcp_client.cc  tcp_server.cc  tcpclient.cc  tcpmessageextractor.cc  tcpserver.cc
peripheral/src/buffer/: circular_buffer.cc  circular_buffer_fast.cc  fast_buffer.cc
peripheral/test/: CMakeLists.txt  buffer.cc  buffer1.cc  client.cc  extractor.cc  extractor1.cc  full_packet.cc  msg_extractor.cc  packet1.cc  packet2.cc  send_receive.cc
peripheral/test/buffer/: buffer.cc  buffer1.cc  buffer2.cc
peripheral/test/ip/: client.cc  full_packet.cc  packet1.cc  packet2.cc  send_receive.cc  through_put.cc
peripheral/test/serial/: serial.cc
src/: main.cpp
